fix gen error
